--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -22,7 +24,7 @@
   "bugs": {
     "url": "https://github.com/Ahmad-Sawalqeh/react-templates/issues"
   },
-  "homepage": "https://ahmad-sawalqeh.github.io/react-templates/",
+  "homepage": "https://ahmad-sawalqeh.github.io/weatherApp/",
   "dependencies": {
     "bootstrap": "^4.4.1",
     "node-sass": "^4.13.1",
